# marketplace_api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  manage.py  pyproject.toml
docker_compose/: backend.yaml  docker-compose-dev.yaml  storages.yaml
src/api/v1/: exception_handler.py  urls.py
src/api/v1/auth/: urls.py  views.py
src/api/v1/authentication/: serializers.py  urls.py
src/api/v1/cart/: serializers.py  urls.py  views.py
src/api/v1/common/: mixins.py  serializers.py
src/api/v1/products/: filters.py  pagination.py  urls.py
src/api/v1/sellers/: serializers.py  urls.py  views.py
src/api/v1/users/: serializers.py  urls.py  views.py
src/apps/authentication/: constants.py  containers.py
src/apps/authentication/command/: oauth.py
src/apps/authentication/commands/: oauth.py
src/apps/cart/: commands.py  constants.py  containers.py  converters.py  entities.py  exceptions.py  models.py
src/apps/common/: commands.py  containers.py  entities.py  exceptions.py  models.py  routers.py  types.py  utils.py
src/apps/products/: apps.py  constants.py  containers.py  filters.py  models.py  pagination.py  permissions.py
src/apps/sellers/: apps.py  commands.py  containers.py  exceptions.py  models.py  permissions.py  routers.py
src/apps/users/: admin.py  commands.py  containers.py  converters.py  entities.py  managers.py  models.py  permissions.py  validators.py
src/project/: asgi.py  containers.py  exception_handler.py  urls.py  wsgi.py
src/project/settings/: dev.py  main.py
src/tests/: conftest.py
src/tests/v1/: conftest.py  factories.py
tests/v1/: conftest.py
tests/v1/cart/: conftest.py  factories.py
tests/v1/mocks/: http_client.py
tests/v1/products/: conftest.py  factories.py  utils.py
tests/v1/sellers/: conftest.py  factories.py
tests/v1/users/: conftest.py  factories.py
(+233 files in other folders)
